--- a/singolo1.css
+++ b/singolo1.css
@@ -1,4 +1,4 @@
-@import url('fonts.css');
+@import url('asserts/fonts/fonts.css');
 
 * {
 	margin: 0;
@@ -31,7 +31,7 @@
 
 .logo__text {
 	color: #ffffff;
-	transition: all 1s;
+  transition: all 1s;
 }
 
 .logo__text:hover {
