--- a/style.css
+++ b/style.css
@@ -5,7 +5,12 @@ html {
   scroll-behavior: smooth;
 }
 
+body {
+  padding-top: 95px;
+}
+
 * {
+  box-sizing: border-box;
 	margin: 0;
 	padding: 0;
 	font-family: "Lato", "Tahoma", sans-serif;
@@ -13,8 +18,7 @@ html {
 }
 
 section {
-  box-sizing: border-box;
-  padding: 59px 40px 50px;
+  scroll-margin-top: 94px;
 }
 
 li {
@@ -27,24 +31,36 @@ a {
 }
 
 .wrapper {
-	max-width: 1020px;
-	margin: 0 auto;
+  max-width: 1020px;
+  margin: 0 auto;
+  padding: 0 40px;
 }
 
 /* HEADER */
 
 .header {
-	display: flex;
-	justify-content: space-between;
-	box-sizing: border-box;
-	height: 95px;
-	padding: 28px 39px 0px 40px;
-	background-color: #2d303a;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 5;
+  background-color: #2d303a;
 	border-bottom: 6px solid #323746;
 }
 
+.header-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 89px;
+}
+
+.hamburger-btn {
+  display: none;
+}
+
 .logo {
-	height: 30px;
+	height: 31.5789%;
 	font-weight: 700;
 	text-transform: uppercase;
 }
@@ -69,7 +85,7 @@ a {
 .navigation {
 	display: flex;
 	justify-content: space-between;
-	width: 372px;
+	width: 372px;                      /*????*/
 	padding-top: 13px;
 }
 
@@ -117,21 +133,22 @@ a {
 /* SLIDER */
 
 .slider {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	position: relative;
-	height: 600px;
-	padding: 0px 39px 5px 42px;
   border-bottom: 6px solid;
   transition: all 1s;
+}
+
+.slider-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+  padding: 0 40px;
 }
 
 .slider__button {
 	position: relative;
 	width: 16px;
 	height: 27px;
-	background: url(asserts/img/chev.svg) center no-repeat;
 	border: none;
 	cursor: pointer;
 }
@@ -148,7 +165,6 @@ a {
 	right: 75%;
 	width: 16px;
 	height: 27px;
-	background: url(asserts/img/chev.svg) center no-repeat;
 }
 
 .slider__button:hover::after {
@@ -159,10 +175,22 @@ a {
 	transform: rotate(180deg);
 }
 
+.arrow-red,
+.arrow-red:hover::before,
+.arrow-red:hover::after {
+  background: url(asserts/img/chev-red.svg) center no-repeat;
+}
+
+.arrow-blue,
+.arrow-blue:hover::before,
+.arrow-blue:hover::after {
+  background: url(asserts/img/chev-blue.svg) center no-repeat;
+}
+
 .slider__frame {
   display: flex;
-  padding: 25px 0;
   width: 85%;
+  padding: 54px 0;
   overflow: hidden;
 }
 
@@ -187,6 +215,7 @@ a {
 .slide1 {
   justify-content: space-between;
   align-items: flex-start;
+  padding-right: 19%;
 }
 
 .slide2 {
@@ -198,48 +227,46 @@ a {
   position: relative;
 }
 
-.slide1__item_turned {
-  width: calc(18% + 22rem);
+.slide1__item {
+  width: 33%;
+}
+
+.slide__item .mobile-phone {
+  display: block;
+  width: 100%;
 }
 
 .slide__item .mobile-screen-on {
-	position: absolute;
-}
-.slide1__item .mobile-screen-on {
-	top: 65px;
-	left: 14px;
-	width: 188px;
-	height: 333px;
-	background: url(asserts/img/layer6.svg) -14px -135px no-repeat;
+  position: absolute;
+  top: 14.2%;
+	left: 6%;
+	width: 87.4419%;
+  height: 72.707423508%;
+  background: url(asserts/img/phone-vertical-display.png) center no-repeat;
+  background-size: cover;
+  transition: all 1s;
 }
 
 .slide1__item_turned .mobile-screen-on {
-	top: 135px;
-	left: -62px;
-	width: 334px;
-	height: 189px;
-	background: url(asserts/img/layer5.svg) -124px -119px no-repeat;
+	top: 29.3%;
+	left: -28%;
+	width: 154%;
+	height: 41.2%;
+  background: url(asserts/img/phone-horizontal-display.png) center no-repeat;
+  background-size: cover;
 }
 
 .slide2__item_small .mobile-screen-on {
-  top: 42px;
-	left: 9px;
-	width: 123px;
-	height: 217px;
-	background: url(asserts/img/layer7.png) center no-repeat;
+  background: url(asserts/img/phone-vertical-display.png) center no-repeat;
+  background-size: cover;
 }
 
 .slide2__item_big .mobile-screen-on {
-  top: 68px;
-	left: 13px;
-	width: 201px;
-	height: 354px;
-	background: url(asserts/img/layer8.png) center no-repeat;
+  background: url(asserts/img/layer8.png) center no-repeat;
+  background-size: cover;
 }
 
 .slide1__item .mobile-phone {
-	width: 215px;
-	height: 458px;
 	border-radius: 26px;
 	box-shadow:	25px 25px #cd5d56, 20px 20px #cd5d56, 15px 15px #cd5d56, 10px 10px #cd5d56, 5px 5px #cd5d56;
 }
@@ -250,16 +277,14 @@ a {
 }
 
 .slide2__item_small {
-  width: 141px;
-  height: 298px;
+  width: 17.647%;
   border-radius: 16px;
   box-shadow:	16px 16px #5677cd, 12px 12px #5677cd, 8px 8px #5677cd, 4px 4px #5677cd, 2px 2px #5677cd;
   opacity: 0.5;
 }
 
 .slide2__item_big {
-  width: 229px;
-  height: 486px;
+  width: 28.66%;
   border-radius: 27px;
   box-shadow:	25px 25px #5677cd60, 25px 25px #5677cd50, 20px 20px #5677cd30, 15px 15px #5677cd10, 10px 10px #5677cd10;
   z-index: 2;
@@ -281,9 +306,13 @@ a {
 /* SERVICES */
 
 .services {
-	height: 500px;
 	background-color: #f2f2f2;
 	border-bottom: 6px solid #ffffff;
+}
+
+.services-wrapper {
+  padding-top: 60px;
+  padding-bottom: 31px;
 }
 
 .section-headline {
@@ -310,13 +339,13 @@ a {
 }
 
 .servises__items {
-  margin: 43px -1px 0 1px;
+  margin-top: 43px;
 }
 
 .services__item {
-	display: flex;
+  display: flex;
 	justify-content: space-between;
-  width: 32%;
+  width: calc((100% - 4rem) / 3);
   overflow: hidden;
 }
 
@@ -325,9 +354,9 @@ a {
 }
 
 .icon_big {
-  margin: 4px 20px 0 0;
-  min-width: 55px;
-	height: 55px;
+  margin-top: 4px;
+  min-width: 59px;
+	height: 59px;
 	border: 2px solid #666d89;
 }
 
@@ -355,7 +384,8 @@ a {
 	background: url(asserts/img/star.svg) center no-repeat;
 }
 
-.item-description {
+.services .item-description {
+  width: calc((100% - 2rem - 5.9rem));
   margin-bottom: 27px;
 }
 
@@ -364,10 +394,6 @@ a {
   font-weight: 900;
   color: #666d89;
   letter-spacing: -0.1px;
-}
-
-.services__item:nth-child(3n) .item-description__headline {
-  padding-left: 2px;
 }
 
 .item-description__text {
@@ -390,9 +416,13 @@ a {
 /* PORTFOLIO */
 
 .portfolio {
-	height: 869px;
 	background-color: #2d303a;
 	border-bottom: 6px solid #323746;
+}
+
+.portfolio-wrapper {
+  padding-top: 59px;
+  padding-bottom: 47px;
 }
 
 .tags {
@@ -407,6 +437,7 @@ a {
 	color: #767e9e;
 	border: 1px solid #767e9e;
 	border-radius: 5px;
+  user-select: none;
 }
 
 .tags__item:not(.tags__item_active):hover {
@@ -424,15 +455,18 @@ a {
 	display: flex;
 	flex-flow: row wrap;
 	justify-content: space-between;
-  align-content: space-between;
-  width: 940px;
-  height: 601px;
+  align-content: flex-start;
 }
 
 .portfolio__pic {
-	width: 220px;
-  height: 187px;
+  width: calc((100% - 6rem) / 4);
+  margin-bottom: 20px;
   cursor: pointer;
+}
+
+.portfolio__pic img {
+  display: block;
+  width: 100%;
 }
 
 .portfolio__pic:nth-child(n+13) {
@@ -442,13 +476,17 @@ a {
 /* ABOUT US */
 
 .about-us {
-	height: 734px;
 	background-color: #f2f2f2;
 	border-bottom: 6px solid #ffffff;
 }
 
+.about-us-wrapper {
+  padding-top: 60px;
+  padding-bottom: 68px;
+}
+
 .about-us__items {
-  margin-top: 45px;
+  margin-top: 44px;
 }
 
 .about-us__item {
@@ -456,19 +494,16 @@ a {
 	flex-flow: row wrap;
   justify-content: flex-start;
   align-content: space-between;
-  width: 300px;
-  height: 443px;
+  width: calc(96% / 3);
 }
 
 .person {
-  margin-bottom: 15px;
-}
-
-.about-us__item:not(:nth-child(3n)) .person {
-  margin-left: -1px;
+  display: block;
+  width: 100%;
 }
 
 .about-us .item-description {
+  margin-top: 14px;
   margin-bottom: 22px;
   width: 100%;
 }
@@ -479,16 +514,10 @@ a {
   text-overflow: ellipsis;
   word-wrap: break-word;
 }
-
-
 .social-medias {
 	display: flex;
-  justify-content: space-between;
-	width: 152px;
-}
-
-.about-us__item:nth-child(1) .social-medias {
-  padding-left: 1px;
+  justify-content: flex-start;
+  width: 100%;
 }
 
 .icon {
@@ -496,8 +525,9 @@ a {
 }
 
 .icon_small {
-  width: 30px;
-	height: 30px;
+  margin-right: 8px;
+  width: 32px;
+	height: 32px;
   border: 1px solid #666d89;
   cursor: pointer;
 }
@@ -541,9 +571,12 @@ a {
 /* CONTACT US */
 
 .contact-us {
-	height: 654px;
 	background-color: #f06c64;
 	border-bottom: 6px solid #ea676b;
+}
+
+.contact-us-wrapper {
+  padding-top: 59px;
 }
 
 .contact-us * {
@@ -551,7 +584,8 @@ a {
 }
 
 .layout-2-col {
-	display: flex;
+  display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   padding-top: 44px;
 }
@@ -561,14 +595,14 @@ a {
 	flex-wrap: wrap;
 	justify-content: center;
 	align-content: space-between;
-	width: 619px;
-	height: 417px;
+	width: calc((100% - 2rem) / 920 * 620);
 }
 
 .contact-form > * {
+  margin-bottom: 17px;
+  padding: 0px 15px 1px;
 	width: 100%;
 	height: 37px;
-	padding: 0px 15px 1px;
 	line-height: 2.2rem;
 	font-weight: 400;
 	color: #f48c8f;
@@ -591,16 +625,22 @@ a {
 }
 
 .contact-form__area {
+  margin-bottom: 13px;
   padding-top: 7px;
-	height: 194px;
+	height: 202px;
 	resize: none;
 }
 
 .contact-form__button,
 .modal-window__button {
-	width: 100px;
+  width: 150px;
+  min-height: 45px;
+  font-size: 1.8rem;
+  font-weight: 300;
+  color: #f48c8f;
 	background-color: #f0d8d9;
-	border: 1px solid #d6564f;
+  border: 1px solid #d6564f;
+  border-radius: 5px;
 	cursor: pointer;
 	transition: all 1s;
 }
@@ -611,7 +651,7 @@ a {
 }
 
 .contacts {
-  width: 300px;
+  width: calc((100% - 2rem) / 920 * 300);
 }
 
 .contacts__headline {
@@ -653,18 +693,31 @@ a {
 /* FOOTER */
 
 .footer {
-	box-sizing: border-box;
-	display: flex;
-	justify-content: space-between;
-	padding: 22px 40px 0px 43px;
-	height: 76px;
-	color: #666d89;
+  color: #666d89;
 	background-color: #2d303a;
+}
+
+.footer-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  min-height: 76px;
 }
 
 .copyright {
   line-height: 3.2rem;
   letter-spacing: -0.2px;
+}
+
+.footer .social-medias {
+	display: flex;
+  justify-content: flex-end;
+  width: 50%;
+}
+
+.footer .icon_small {
+  margin-right: 0;
+  margin-left: 8px;
 }
 
 /* MODAL WINDOW */
@@ -691,6 +744,7 @@ a {
   min-width: 30%;
   max-width: 60%;
   min-height: 30%;
+  max-height: 90%;
   font-size: 2rem;
   background-color: #f2f2f2;
   border: 2px solid #d6564f;
@@ -706,16 +760,340 @@ a {
 .modal-window__subject,
 .modal-window__comments {
   align-self: flex-start;
+  margin: 10px 0;
+  padding: 5px;
+  width: 100%;
+  min-height: 40px;
   font-size: 1.8rem;
   line-height: 3.0rem;
   font-weight: 300;
   color: #767e9e;
+  border: 1px dashed #d6564f;
   white-space: pre-wrap;
+  overflow: auto;
 }
 
-.modal-window__button {
-  height: 50px;
-  font-size: 1.5rem;
-  color: #f48c8f;
-  border-radius: 5px;
+/* TABLET */
+
+@media (max-width: 1019px) {
+  .slider-wrapper {
+    padding: 0 3.65%;
+  }
+
+  .slider__frame {
+    padding: 5.3vw 0;
+  }
+
+  .slider__button {
+    height: 50vw;
+  }
+
+  .slider__button:hover::before,
+  .slider__button:hover::after {
+    display: none;
+  }
+
+  .slide1__item .mobile-phone {
+    border-radius: 2.6vw;
+    box-shadow:	2.5vw 2.5vw #cd5d56, 2vw 2vw #cd5d56, 1.5vw 1.5vw #cd5d56, 1vw 1vw #cd5d56, 0.5vw 0.5vw #cd5d56;
+  }
+
+  .slide1__item_turned .mobile-phone {
+    box-shadow: 2.5vw -2.6vw #ce5d56, 2vw -2.1vw #ce5d56, 1.5vw -1.6vw #ce5d56, 1vw -1.1vw #ce5d56, 0.5vw -0.6vw #ce5d56;
+  }
+
+  .slide2__item_small {
+    border-radius: 1.6vw;
+    box-shadow:	1.6vw 1.6vw #5677cd, 1.2vw 1.2vw #5677cd, 0.8vw 0.8vw #5677cd, 0.4vw 0.4vw #5677cd, 0.2vw 0.2vw #5677cd;
+  }
+
+  .slide2__item_big {
+    border-radius: 2.7vw;
+    box-shadow:	2.5vw 2.5vw #5677cd60, 2.5vw 2.5vw #5677cd50, 2vw 2vw #5677cd30, 1.5vw 1.5vw #5677cd10, 1vw 1vw #5677cd10;
+  }
+
+  .services-wrapper {
+    padding: 39px 40px 16px;
+  }
+
+  .servises__items {
+    margin-top: 33px;
+  }
+
+  .services__item {
+    width: calc((100% - 5.3rem - 2.2rem) / 2);
+  }
+
+  .tags {
+    padding: 19px 1px 28px;
+  }
+
+  .portfolio__pic {
+    width: calc((100% - 4rem) / 3);
+  }
+
+  .about-us-wrapper {
+    padding: 52px 40px 75px;
+  }
+
+  .about-us .item-description__text {
+    padding-top: 3px;
+  }
+
+  .contact-us-wrapper {
+    padding-top: 53px;
+  }
+
+  .layout-2-col {
+    padding-top: 20px;
+  }
+
+  .contact-form {
+    width: 64.15%;
+  }
+
+  .contact-form > * {
+    margin-bottom: 13px;
+  }
+
+  .contact-form__area {
+    height: 168px;
+  }
+
+  .contact-form__button {
+    margin-bottom: 39px;
+  }
+
+  .contacts {
+    width: 32.08%;
+  }
+
+  .modal-window {
+    max-width: 80%;
+  }
+}
+
+/* for tablet only, when mobile === desktop */
+
+@media (max-width: 1019px) and (min-width: 768px) {
+  .services__item {
+    margin-right: 22px;
+  }
+
+  .services .item-description {
+    margin-bottom: 53px;
+  }
+
+  .about-us .item-description {
+    margin: 12px 0;
+  }
+
+  .contact-form__area {
+    margin-bottom: 17px;
+  }
+
+  .contacts__text {
+    padding-top: 7px;
+  }
+
+  .contact-us .item-description {
+    margin-bottom: 15px;
+  }
+}
+
+
+/* MOBILE */
+
+@media (max-width: 767px) {
+  body {
+    padding-top: 71px;
+  }
+
+  section {
+    scroll-margin-top: 70px;
+  }
+
+  .wrapper {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+
+  .header,
+  .services,
+  .portfolio,
+  .about-us,
+  .contact-us,
+  .footer {
+    border-bottom: none;
+  }
+
+  .about-us__item,
+  .services__item,
+  .contact-form,
+  .contact-form__button,
+  .contacts {
+    width: 100%;
+  }
+
+  .header-wrapper {
+    justify-content: start;
+    padding: 0 20px;
+    height: 71px;
+  }
+
+  .hamburger-btn {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 25px;
+    height: 20px;
+    cursor: pointer;
+    transition: all 1s;
+  }
+
+  .hamburger-btn_turned {
+    transform: rotate(90deg);
+  }
+
+  .hamburger-btn__line,
+  .hamburger-btn:after,
+  .hamburger-btn:before {
+    content: "";
+    background-color: #ffffff;
+    border-radius: 5px;
+    height: 2px;
+  }
+
+  .logo {
+    margin-left: 30.75%;
+    transition: all 1s;
+  }
+
+  .logo_sticked {
+    margin-left: 8.5%;
+  }
+
+  .header__navigation {
+    position: fixed;
+    display: flex;
+    justify-content: flex-end;
+    top: 71px;
+    left: -100%;
+    bottom: 0;
+    width: 74vw;
+    background-color: #2d303a;
+    z-index: 4;
+    transition: all 1s;
+  }
+
+  .header__navigation_active {
+    left: 0;
+    box-shadow: 26vw 0 rgba(0, 0, 0, 0.5);
+  }
+
+  .navigation {
+    margin-top: 20vh;
+    padding-top: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 74%;
+    height: 32vh;
+  }
+
+  .navigation__item::before {
+    display: none;
+  }
+
+  .navigation__link {
+    font-size: 24px;
+    line-height: 29px;
+  }
+
+  .slider-wrapper {
+    padding: 0 2.6%;
+  }
+
+  .services-wrapper {
+    padding: 25px 32px 0px;
+  }
+
+  .servises__items {
+    margin-top: 25px;
+    padding-right: 11px;
+  }
+
+  .portfolio-wrapper {
+    padding: 42px 30px 29px;
+  }
+
+  .tags {
+    padding: 22px 1px 25px;
+  }
+
+  .portfolio__pic {
+    width: calc((100% - 1.3rem) / 2);
+    margin-bottom: 13px;
+  }
+
+  .portfolio__pic:nth-child(n+9) {
+    display: none;
+  }
+
+  .about-us-wrapper {
+    padding: 35px 30px 10px;
+  }
+
+  .about-us__items {
+    margin-top: 30px;
+  }
+
+  .about-us__item {
+    margin-bottom: 35px;
+  }
+
+  .about-us__item > div {
+    width: 100%;
+  }
+
+  .about-us .item-description {
+    margin-bottom: 15px;
+  }
+
+  .about-us .item-description__text {
+    padding-top: 2px;
+  }
+
+  .contact-us-wrapper {
+    padding: 44px 30px 40px;
+  }
+
+  .layout-2-col {
+    padding-top: 30px;
+  }
+
+  .contact-form__button {
+    margin-bottom: 30px;
+  }
+
+  .footer-wrapper {
+    justify-content: center;
+  }
+
+  .copyright {
+    display: none;
+  }
+
+  .footer .social-medias {
+    justify-content: center;
+    width: 100%;
+  }
+
+  .footer .icon_small {
+    margin: 0 8px;
+  }
+
+  .modal-window {
+    max-width: 90%;
+  }
 }
